Fixed on mobile?

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body {
     margin-top: 20%;
+    width: 100%;
+    height: 100vh;
     font-family: 'Quicksand', sans-serif;
 }
 
